Issue #3269035 by immaculatexavier, sokru, askibinski, seanB: [Entity browser] Regression: Hover state text overlaps icon

--- a/styles/components/entity_browser.scss
+++ b/styles/components/entity_browser.scss
@@ -51,8 +51,8 @@
     > .edit-button {
       @include custom-icon-button('edit');
       position: absolute;
-      bottom: 0;
-      right: 0;
+      top: 0;
+      right: 2.6rem;
     }
   }
 }
