--- a/styles/helpers/_tools.scss
+++ b/styles/helpers/_tools.scss
@@ -66,7 +66,9 @@ $html-font-size: 16px;
 
   &:hover,
   &:focus {
+    background-color: white;
     border-color: var(--colorGinPrimary) !important;
+    color: transparent;
     cursor: pointer;
   }
 }
